--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPm5QXCZ0PDlvFCKC1tVHuV",
+      "authorship_tag": "ABX9TyOBRy3BQ0J/90REygxNUn0f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,6 +188,47 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Explanations and interesting findngs:\n",
+        "## 1. PDP Plot -\n",
+        "Initially, as 'AveRooms' increases, the predicted value slightly decreases. Around 'AveRooms' value of 5, the trend reverses, and the predicted value starts to increase sharply. This indicates a non-linear relationship between 'AveRooms' and the predicted outcome. The initial decrease followed by a sharp increase suggests that there might be an optimal range of 'AveRooms' where the outcome is minimized before it starts increasing again. This non-linear pattern can be important for decision-making, indicating that there might be a threshold effect.\n",
+        "\n",
+        "The initial decrease followed by a sharp increase suggests that there might be an optimal range of 'AveRooms' where the outcome is minimized before it starts increasing again.\n",
+        "This non-linear pattern can be important for decision-making, indicating that there might be a threshold effect.\n",
+        "\n",
+        "\n",
+        "##. ICE PLOT\n",
+        "The plot reveals a spread of lines, each representing an individual prediction's response to changes in 'AveRooms'.\n",
+        "The variability among the lines indicates that the effect of 'AveRooms' is not uniform across all observations.\n",
+        "This individual variability highlights that 'AveRooms' has a different impact depending on the context of other features.\n",
+        "\n",
+        "The spread of lines suggests that there are interaction effects between 'AveRooms' and other features.\n",
+        "The ICE plot complements the PDP by showing the heterogeneity in the data that the PDP averages out.\n",
+        "\n",
+        "## ALE PLOT\n",
+        "The ALE plot shows an initial fluctuation, followed by a steady increase.\n",
+        "This indicates that, on average, the prediction is less sensitive to small changes in 'AveRooms' initially, but the sensitivity increases with larger values of 'AveRooms'.\n",
+        "\n",
+        "The initial fluctuation might indicate noise or a small segment of the population for which 'AveRooms' has a different effect.\n",
+        "The steady increase corroborates the PDP's finding of a positive relationship at higher values but does so more reliably by accounting for feature interactions.\n",
+        "\n",
+        "## DIFFERENCE BETWEEN PDP AND ALE PLOT\n",
+        "The PDP plot provides a global average effect of 'AveRooms' on the prediction, ignoring any potential correlations with other features. On the other hand , the ALE plot considers the interactions and correlations between 'AveRooms' and other features, providing a more accurate effect.\n",
+        "\n",
+        "## CORRELATIONS AND IMPACT ON RESULTS\n",
+        "1. AveRooms and AveBedrms: Since 'AveRooms' and 'AveBedrms' are strongly correlated, they may have redundant effects in the model. This redundancy can impact the Partial Dependence Plot (PDP) and Accumulated Local Effects (ALE) plot differently. PDP does not consider feature interactions, so it may not account for the joint influence of these correlated features as accurately as ALE.\n",
+        "\n",
+        "2. The negative correlation between longitude and latitude could introduce multicollinearity, where the model struggles to distinguish their individual effects. This could cause overfitting.\n",
+        "\n",
+        "3. The moderate correlation between AveOccup and Population suggests that both features provide similar information, which could reduce the interpretability of the individual feature effects. In ICE plots, this might result in more variability\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gkUuswIm1gGZ"
+      }
     }
   ]
 }
