--- a/assignment_6.ipynb
+++ b/assignment_6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNvctLFQ1UGb+DI7UZYQ2BW",
+      "authorship_tag": "ABX9TyOzONVsbjKmWot0tzLxHdAM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -270,7 +270,10 @@
         "\n",
         "## CORRELATIONS AND IMPACT ON RESULTS\n",
         "\n",
-        "'Artist End Date' shows a weak negative correlation with 'Object Begin Date' (-0.10), indicating that as the artist's end date increases, the object's begin date may slightly decrease, but the relationship is not much. In contrast, 'Object Begin Date' and 'Object End Date' are strongly positively correlated (0.90), suggesting that as the object's begin date increases, its end date tends to increase significantly as well. The correlation between 'Artist End Date' and 'Object End Date' is weakly positive (0.04), indicating a minimal relationship.\n"
+        "'Artist End Date' shows a weak negative correlation with 'Object Begin Date' (-0.10), indicating that as the artist's end date increases, the object's begin date may slightly decrease, but the relationship is not much. In contrast, 'Object Begin Date' and 'Object End Date' are strongly positively correlated (0.90), suggesting that as the object's begin date increases, its end date tends to increase significantly as well. The correlation between 'Artist End Date' and 'Object End Date' is weakly positive (0.04), indicating a minimal relationship.\n",
+        "\n",
+        "# Sources\n",
+        "I used Gen AI to help me with some of the coding aspects while building the model and also for debugging\n"
       ],
       "metadata": {
         "id": "QY9p8NRBCO7Z"
